--- a/about_me/introduction.html
+++ b/about_me/introduction.html
@@ -7,10 +7,12 @@
 
 	</head>
 	<body>
-		<center>
-			
-				<h1> About Me </h1> 
-				<h2> By Woo Jae Kim </h2>
+		<p>
+			<a href = "../index.html">Go back </a>
+		</p>
+		<div id="main-container">
+			<h1> About Me </h1> 
+			<h2> By Woo Jae Kim </h2>
 			<div id = "first">
 				<h3> Introduction </h3>
 				<p> My name is <STRONG> Woo Jae Kim </STRONG> and I am 19 years old. I am from South Korea. </p>
@@ -41,5 +43,5 @@
 				</div>
 			</div>
 
-		</center>
+		</div>
 	</body>
