js - practice, interactive

--- a/input/input.html
+++ b/input/input.html
@@ -11,7 +11,7 @@
 
 	<body>
 
-
+		<a href = "../index/index.html">Go back </a>
 		<div id = "outercontainer">
 			<input type = "text" id = "firstname" value = "Mickey">
 			<br>
