--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<p>
-			<a href = "../index.html">Go back </a>
+			<a href = "../index/index.html">Go back </a>
 		</p>
 		<div id="main-container">
 			<h1> About Me </h1> 
