--- a/pie/pie.html
+++ b/pie/pie.html
@@ -8,6 +8,7 @@
 	</head>
 
 	<body>
+		<a href = "../index/index.html">Go back </a>
 		<div class="center">
 			<span> Grandma's Lemon Meringue Pie </span>
 		</div>
@@ -23,86 +24,97 @@
 		</div>
 		<div class = "container">
 			<span> INGREDIENTS </span>
-		
 			<ul>
 				<li> 1 cup white sugar </li>
-				<li>2 tbsp all-purpose flour </li>
-			    <li>3 tbsp cornstarch </li>
-			    <li>1/4 tsp salt </li>
+				<li>2 
+					<div class="tooltip">tbsp 
+						<span class="tooltiptext">tablespoon</span> 
+					</div> all-purpose flour </li>
+			    <li>3 <div class="tooltip">tbsp
+  						<span class="tooltiptext">tablespoon</span>
+					</div> cornstarch </li>
+			    <li>1/4 <div class="tooltip">tsp
+  						<span class="tooltiptext">teaspoon</span>
+					</div> salt </li>
 			    <li> 1 1/2 cups water </li>
 			    <li>2 lemons, juiced and zested </li>
-			    <li>2 tbsp butter </li>
+			    <li>2 <div class="tooltip">tbsp
+  						<span class="tooltiptext">tablespoon</span>
+					</div> butter </li>
 			    <li>4 egg yolks, beaten </li>
 			    <li>1 (9 inch) pie crust, baked </li>
 			    <li>4 egg whites </li>
-			    <li>6 tbsp white sugar </li>
+			    <li>6 <div class="tooltip">tbsp
+  						<span class="tooltiptext">tablespoon</span>
+					</div> white sugar </li>
 			</ul>
-
 		</div>
 
 		<div class = "container">
-
 			<span> DIRECTIONS </span>
-
-			<ol>
-			    <li> <span>Preheat Oven </span>: Preheat oven to 350 degrees F (175 degrees C). </li>
+			<ol> 
+			    <li> <STRONG>Preheat Oven </STRONG>: Preheat oven to 350 degrees F (175 degrees C). </li>
 			   	<li> 
-			   		Make Lemon Filling: In a medium saucepan ... 
+			   		<STRONG>Make Lemon Filling </STRONG>: In a medium saucepan ... 
 			   		<ul>
 				        <li> Whisk together 1 cup sugar, flour, cornstarch, and salt. </li>
-				        Stir in water, lemon juice and lemon zest.
-				        Cook over medium-high heat, stirring frequently, until mixture comes to a boil.
-				        Stir in butter.
-				        Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.
-				        Whisk egg yolk mixture back into remaining sugar mixture.
-				        Bring to a boil and continue to cook while stirring constantly until thick.
-				        Remove from heat.
-				        Pour filling into baked pastry shell.
+				        <li>Stir in water, lemon juice and lemon zest.</li>
+				        <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+				        <li>Stir in butter.</li>
+				        <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+				       	<li> Whisk egg yolk mixture back into remaining sugar mixture.
+				        Bring to a boil and continue to cook while stirring constantly until thick.</li>
+				        <li>Remove from heat.</li>
+				        <li>Pour filling into baked pastry shell.</li>
 				    </ul>
 				</li>
-			    <li> Make Meringue: In a large glass or metal bowl ...
-			        Whip egg whites until foamy.
-			        Add sugar gradually, and continue to whip until stiff peaks form.
-			        Spread meringue over pie, sealing the edges at the crust. </li>
-			    <li> Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown. </li>
+
+			    <li> <STRONG>Make Meringue </STRONG>: In a large glass or metal bowl ...
+			    	<ul>
+				        <li>Whip egg whites until foamy.</li>
+				        <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
+				        <li>Spread meringue over pie, sealing the edges at the crust. </li>
+			        </ul>
+			    </li>
+			    <li> <STRONG>Bake </STRONG>: Bake in preheated oven for 10 minutes, or until meringue is golden brown. </li>
 			</ol>
-
-		This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!
-
+		<p>This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of cake pie!</p>
 		</div>
 
 		<div class = "container">
-
-			<h2>USER COMMENTS </h2>
-
-			    This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
-
-			    - Emilie S.
-
-			    Q: What do you call an ape who loves pie?
-			    A: A meringue-utan.
-
-			    - Vickie K.
-
-			    This site can really engage my interest. Follow the recipe above and make it so! This pie is number one.
-
-			    - Jean-Luc Piecard
+			<span>USER COMMENTS </span>
+			<div id = "paragraphmargin">
+				<p>
+					<div id = "yellowbackground">
+				    This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.<br><br>
+				    - Emilie S.<br>
+					</div>
+				    <br>
+				    <div id = "yellowbackground">
+				    Q: What do you call an ape who loves pie?<br>
+				    A: A meringue-utan.<br><br>
+				    - Vickie K.<br>
+				    </div>
+				    <br>
+				    <div id = "yellowbackground">
+				    This site can really <STRONG> engage </STRONG> my interest. Follow the recipe above and <STRONG> make it so</STRONG>! This pie is <STRONG> number one.</STRONG><br><br>
+				    - Jean-Luc Piecard<br>
+				    </div>
+				</p>
+			</div>
 		</div>
 
 		<div class = "container">
-
-
-			<h2> LINKS </h2>
-
-			Search for other lemon meringue pie recipes
-			Home
-
-			Copyright  (COPYRIGHT CHARACTER GOES HERE!!!)  2012 Granny's Pies
-			  A Granny's Pies Production
-			    All rights reserved
+			<span>LINKS </span>
+			<p>
+				<a href= "https://www.google.co.kr/search?q=lemon+meringue+pie+recipes&oq=lemon+meringue+pie+recipes&aqs=chrome..69i57j0l5.150j0j4&sourceid=chrome&ie=UTF-8"> Search for other lemon meringue pie recipes</a><br>
+				<a href= "../index.html"> Home </a>
+			</p>
+			<div id = "copyright">
+Copyright  (COPYRIGHT CHARACTER GOES HERE!!!)  2012 Granny's Pies 
+	A Granny's Pies Production
+		All rights reserved
+			 </div>
 		</div>
-
-
-
 	</body>
 </html>
