--- a/colorcode/colorcode.html
+++ b/colorcode/colorcode.html
@@ -46,7 +46,15 @@
 
 			<!-- If right answer is put in, show color code-->
 			<div id = "colorcode-container">
-				<div id = "hexnum"></div>
+				<div id = "hexnum">
+					<div id = "n1"></div>
+					<div id = "n2"></div>
+					<div id = "n3"></div>
+					<div id = "n4"></div>
+					<div id = "n5"></div>
+					<div id = "n6"></div>
+					<div id = "n7"></div>
+				</div>
 
 				<div id = "showColor">
 					<div id = "c1"></div>
@@ -65,11 +73,11 @@
 				<div id = "colorList">
 					<span> <STRONG>Number of data classes</STRONG> </span>
 						<select id = "classes">
-						<option name = "colors" value = "3" selected> 3 </option>
-						<option name = "colors" value = "4"> 4 </option>
-						<option name = "colors" value = "5"> 5 </option>
-						<option name = "colors" value = "6"> 6 </option>
-						<option name = "colors" value = "7"> 7 </option>
+						<option id = "3" value = "3" selected> 3 </option>
+						<option id = "4" value = "4"> 4 </option>
+						<option id = "5" value = "5"> 5 </option>
+						<option id = "6" value = "6"> 6 </option>
+						<option id = "7" value = "7"> 7 </option>
 					</select><br>
 					<span> <STRONG>Nature of your data</STRONG> </span>	
 					<div id = "data" class = "input">
