--- a/fifteen puzzles/fifteenpuzzles.html
+++ b/fifteen puzzles/fifteenpuzzles.html
@@ -36,7 +36,10 @@
 			<button id="shufflebutton">Shuffle</button>
 		</p>
 		
-		<div id="output"></div>
+		<div id="output">
+			<p id = "outputTime"></p>
+			<p id = "outputMove"></p>
+		</div>
 		
 		<p>
 			American puzzle author and mathematician Sam Loyd is often falsely
