--- a/fifteen puzzles/fifteenpuzzles.html
+++ b/fifteen puzzles/fifteenpuzzles.html
@@ -40,6 +40,9 @@
 			<p id = "outputTime"></p>
 			<p id = "outputMove"></p>
 		</div>
+
+		<button type = "button" id = "16"> 4 x 4 </button>
+		<button type = "button" id = "64"> 8 x 8 </button>
 		
 		<p>
 			American puzzle author and mathematician Sam Loyd is often falsely
