--- a/alphabetFrequency/index.html
+++ b/alphabetFrequency/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 
-		<svg></svg>
+		<svg width = "960" height = "500"></svg>
 	
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src = "https://d3js.org/d3.v4.min.js"></script>
